[package]
name = "acl_example"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.9"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
email-address = "0.2"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
